--- a/app/src/main/res/layout/activity_store_menus_editor.xml
+++ b/app/src/main/res/layout/activity_store_menus_editor.xml
@@ -2,8 +2,9 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
-              tools:context="com.softmarshmallow.foodle.Views.StoreCreator_Deprecated.StoreCreator_Form_MenusFragment">
+              tools:context="com.softmarshmallow.foodle.Views.StoreEditor.StoreMenusEditorActivity">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -12,13 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:background="#4dcdcdcd">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/leftarrowarrows"/>
+        android:background="@color/colorPrimaryDark">
 
         <TextView
             android:layout_width="wrap_content"
@@ -35,17 +30,32 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_marginRight="20dp"
-            android:text="저장"
+            android:text="완료"
             android:textColor="#fff"
             android:textSize="14dp"/>
     </android.support.v7.widget.Toolbar>
 
-    <Button
+    <mehdi.sakout.fancybuttons.FancyButton
         android:id="@+id/createNewMenuButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="create new menu"
-        android:textAllCaps="false"/>
+        android:layout_height="40dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        app:fb_borderColor="@color/colorPrimaryDark"
+        app:fb_borderWidth="1dp"
+        app:fb_defaultColor="@color/colorPrimaryDark"
+        app:fb_radius="10dp"
+        app:fb_text="새로운 매뉴 등록"
+        app:fb_textColor="#fff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/menusRecyclerView"
