--- a/app/src/main/res/layout/activity_main_tab_controller.xml
+++ b/app/src/main/res/layout/activity_main_tab_controller.xml
@@ -49,6 +49,15 @@
                     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
+                    <ImageButton
+                        android:id="@+id/showSideNavigationButton"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:background="@null"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/menu"
+                        android:tint="@color/colorPrimaryDark"/>
+
                     <ImageView
                         android:id="@+id/toolbar_title"
                         android:layout_width="70dp"
