--- a/app/src/main/res/layout/activity_profile_editor.xml
+++ b/app/src/main/res/layout/activity_profile_editor.xml
@@ -283,7 +283,7 @@
         android:layout_height="0.1dp"
         android:background="#ACACAC"/>
 
-
+<!--
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -342,7 +342,7 @@
             android:textSize="16dp"/>
 
 
-    </LinearLayout>
+    </LinearLayout>-->
 
 
 
