--- a/app/src/main/res/layout/activity_store_review_creater.xml
+++ b/app/src/main/res/layout/activity_store_review_creater.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:gravity="center"
-              android:orientation="vertical"
-              android:padding="50dp">
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    >
 
     <TextView
         android:id="@+id/textView13"
@@ -15,30 +15,84 @@
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:gravity="center"
-        android:text="Create review"
-        android:textSize="30sp"
+        android:text="생각을 알려주세요!"
+        android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView13"/>
 
     <RatingBar
         android:id="@+id/ReviewRatingbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:numStars="5"
-        android:rating="90"
-        android:stepSize="10"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView13"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"/>
+        android:layout_marginTop="25dp"
+        android:numStars="5"
+        android:rating="4"
+        android:stepSize="10"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView13"/>
 
 
+    <View
+        android:id="@+id/view4"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="0dp"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ReviewRatingbar"/>
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="35dp"
+        android:text="내용"
+        android:textColor="#313131"
+        android:textSize="18dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view4"
+        android:id="@+id/textView14"/>
+
+    <EditText
+        android:id="@+id/ReviewContentEditText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:background="#00000000"
+        android:hint="Jidhar apna CRUSH hai , udhar hich sala RUSH hai and filhaal timepass k liye only CANDYCRUSH he."
+        android:textColor="#313131"
+        android:textColorHint="#313131"
+        android:textSize="14dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginTop="28dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView14"/>
 
     <mehdi.sakout.fancybuttons.FancyButton
         android:id="@+id/UploadReviewButton"
@@ -46,9 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginBottom="32dp"
         app:fb_borderColor="@color/colorPrimaryDark"
         app:fb_borderWidth="1dp"
         app:fb_defaultColor="#0000"
@@ -57,30 +109,11 @@
         app:fb_text="리뷰 작성"
         app:fb_textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"/>
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"/>
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="247dp"
-        android:layout_height="76dp"
-        android:layout_marginTop="57dp"
-        app:layout_constraintTop_toBottomOf="@+id/ReviewRatingbar"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/UploadReviewButton"
-        app:layout_constraintVertical_bias="0.0">
-
-        <EditText
-            android:id="@+id/ReviewContentEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="hint"/>
-    </android.support.design.widget.TextInputLayout>
 
 </android.support.constraint.ConstraintLayout>
