--- a/app/src/main/res/layout/card_nearby_store.xml
+++ b/app/src/main/res/layout/card_nearby_store.xml
@@ -25,11 +25,12 @@
             android:layout_marginTop="0dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:scaleType="centerCrop"
-            card_view:layout_constraintDimensionRatio="w,1:1"
             card_view:layout_constraintLeft_toLeftOf="parent"
             card_view:layout_constraintRight_toRightOf="parent"
             card_view:layout_constraintTop_toTopOf="parent"
-            card_view:srcCompat="@drawable/default_foodtruck_featuregraphic"/>
+            card_view:srcCompat="@drawable/default_foodtruck_featuregraphic"
+            card_view:layout_constraintHorizontal_bias="0.0"
+            card_view:layout_constraintDimensionRatio="w,1.1:1"/>
 
         <TextView
             android:id="@+id/storeNameTextView"
@@ -38,6 +39,7 @@
             android:layout_below="@id/thumbnail"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="0dp"
+            android:singleLine="true"
             android:text="StoreName"
             android:textColor="@color/album_title"
             android:textSize="24sp"
