--- a/app/src/main/res/layout/card_store_list_item.xml
+++ b/app/src/main/res/layout/card_store_list_item.xml
@@ -62,6 +62,7 @@
             android:layout_height="38dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
+            android:singleLine="true"
             android:text="StoreName"
             android:textSize="30sp"
             app:layout_constraintLeft_toLeftOf="parent"
