--- a/app/src/main/res/layout/activity_main_tab_controller.xml
+++ b/app/src/main/res/layout/activity_main_tab_controller.xml
@@ -93,7 +93,7 @@
                     android:id="@+id/ntb_horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:ntb_active_color="@color/accent"
+                    app:ntb_active_color="@color/colorPrimary"
                     app:ntb_badge_gravity="top"
                     app:ntb_badge_position="right"
                     app:ntb_badged="true"
