IDK What is the matter

--- a/app/src/main/res/layout/fragment_integrated_search_view.xml
+++ b/app/src/main/res/layout/fragment_integrated_search_view.xml
@@ -6,6 +6,13 @@
               android:minWidth="25px"
               android:minHeight="25px">
 
+    <Button
+        android:id="@+id/Scan"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_weight="1"
+        android:text="Button" />
+
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="match_parent"
@@ -27,7 +34,9 @@
                 android:layout_height="match_parent"
                 android:queryHint="검색어를 입력하세요"
                 android:minHeight="25px"
-                android:minWidth="25px"/>
+                android:minWidth="25px">
+
+            </SearchView>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/searchResultsRecyclerView"
