--- a/app/src/main/res/layout/activity_store_detail_view.xml
+++ b/app/src/main/res/layout/activity_store_detail_view.xml
@@ -52,15 +52,16 @@
                             android:scaleType="centerCrop"
                             app:layout_collapseMode="parallax"/>
                     </RelativeLayout>
-
+<!--
                     <android.support.v7.widget.Toolbar
                         android:id="@+id/toolbar"
                         android:layout_width="match_parent"
                         android:layout_height="?attr/actionBarSize"
                         android:elevation="3dp"
                         app:layout_collapseMode="pin"
+                        app:subtitleTextColor="@color/accent"
                         app:title="title"
-                        app:titleTextColor="@color/accent"/>
+                        app:titleTextColor="@color/accent"/>-->
                 </android.support.design.widget.CollapsingToolbarLayout>
             </android.support.design.widget.AppBarLayout>
 
