updated number enter layout, new drawables.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,14 @@
     <color
         name="colorAccent">#ff6565</color>
     <color
+        name="colorIdentity">#ee5555</color>
+    <color
+        name="colorILight">#FF9696</color>
+    <color
         name="tabSelectedIconColor">#ee5555</color>
     <color
         name="tabUnselectedIconColor">#ee5555</color>
+
     <color
         name="viewBg">#ffffff</color>
     <color
