--- a/app/src/main/res/layout/activity_sms_verification_phone_number_enter_view.xml
+++ b/app/src/main/res/layout/activity_sms_verification_phone_number_enter_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -66,6 +67,59 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
+        <LinearLayout
+            android:id="@+id/linearLayout10"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/phoneNumberTitleTextView">
+
+            <RelativeLayout
+                android:id="@+id/dialCodeChooserContainer"
+                android:layout_width="37dp"
+                android:layout_height="26dp"
+                tools:layout_editor_absoluteX="36dp"
+                tools:layout_editor_absoluteY="271dp">
+
+                <ImageView
+                    android:id="@+id/dialCodeBackgroundImageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/dialog_background"
+                    tools:layout_editor_absoluteX="25dp"
+                    tools:layout_editor_absoluteY="263dp"/>
+
+                <TextView
+                    android:id="@+id/dialCodeTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:gravity="center"
+                    android:text="+1"
+                    android:textColor="@color/colorIdentity"
+                    android:textSize="12sp"/>
+            </RelativeLayout>
+
+            <EditText
+                android:id="@+id/phoneNumberEditText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:ems="10"
+                android:hint="XXX-XXXX-XXXX"
+                android:inputType="phone"
+                android:paddingLeft="10dp"
+                android:singleLine="true"
+                android:textColor="@android:color/white"
+                tools:layout_editor_absoluteX="99dp"
+                tools:layout_editor_absoluteY="271dp"/>
+        </LinearLayout>
     </android.support.constraint.ConstraintLayout>
 
     <ImageView
@@ -81,7 +135,7 @@
 
 
     <mehdi.sakout.fancybuttons.FancyButton
-        android:id="@+id/confirmPhoneNumberButton"
+        android:id="@+id/UploadReviewButton"
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_centerVertical="true"
