--- a/app/src/main/res/layout/activity_sms_verification_phone_number_enter_view.xml
+++ b/app/src/main/res/layout/activity_sms_verification_phone_number_enter_view.xml
@@ -135,7 +135,7 @@
 
 
     <mehdi.sakout.fancybuttons.FancyButton
-        android:id="@+id/UploadReviewButton"
+        android:id="@+id/confirm_button"
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_centerVertical="true"
