updated number enter layout, new drawables.

--- a/app/src/main/res/layout/activity_sms_verification_pin_code_enter_view.xml
+++ b/app/src/main/res/layout/activity_sms_verification_pin_code_enter_view.xml
@@ -58,7 +58,7 @@
 
 
         <TextView
-            android:id="@+id/phoneNumberTitleTextView"
+            android:id="@+id/PinCodeTitleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="4자리 핀번호"
@@ -74,10 +74,10 @@
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/phoneNumberTitleTextView">
+            app:layout_constraintTop_toBottomOf="@+id/PinCodeTitleTextView">
 
             <EditText
-                android:id="@+id/phoneNumberEditText"
+                android:id="@+id/PinCodeEditText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
