--- a/app/src/main/res/layout/activity_sms_verification_pin_code_enter_view.xml
+++ b/app/src/main/res/layout/activity_sms_verification_pin_code_enter_view.xml
@@ -34,7 +34,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleTextView"
-        />
+        android:layout_marginRight="36dp"
+        android:layout_marginLeft="24dp"/>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -101,7 +102,7 @@
         android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_x"
+        app:srcCompat="@drawable/ic_left_arrow"
         android:layout_marginLeft="24dp"/>
 
 
