--- a/app/src/main/res/layout/activity_sms_verification_phone_number_enter_view.xml
+++ b/app/src/main/res/layout/activity_sms_verification_phone_number_enter_view.xml
@@ -108,7 +108,7 @@
             <EditText
                 android:id="@+id/phoneNumberEditText"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
                 android:ems="10"
