--- a/app/src/main/res/layout/country_dropdown_item.xml
+++ b/app/src/main/res/layout/country_dropdown_item.xml
@@ -10,6 +10,6 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="left"
-        android:textColor="@android:color/white"/>
+        android:textColor="@android:color/black"/>
 
 </LinearLayout>
