--- a/app/src/main/res/layout/activity_store_menus_editor.xml
+++ b/app/src/main/res/layout/activity_store_menus_editor.xml
@@ -4,7 +4,7 @@
               android:layout_height="match_parent"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
-              tools:context="com.softmarshmallow.foodle.Views.StoreEditor.StoreMenusEditorActivity">
+              tools:context="com.softmarshmallow.foodle.Views.StoreEditor_Deprecated.StoreMenusEditorActivity">
 
     <!-- TODO: Update blank fragment layout -->
 
